--- a/yamls/spark-benchmark-terragen.yaml
+++ b/yamls/spark-benchmark-terragen.yaml
@@ -1,7 +1,7 @@
 apiVersion: "sparkoperator.k8s.io/v1beta2"
 kind: SparkApplication
 metadata:
-  name: spark-benchmark
+  name: spark-benchmark-terragen
   namespace: t01
 spec:
   sparkConf:
@@ -12,7 +12,7 @@ spec:
   mode: cluster
   image: gcr.io/mapr-252711/spark-2.4.5:202010301117C
   imagePullPolicy: Always
-  mainApplicationFile: "local:///spark-benchmark-mount/terragen.py"
+  mainApplicationFile: "local:///spark-benchmark-mount/scripts/terragen.py"
   restartPolicy:
     type: Never
   arguments:
