--- a/automation/Jenkinsfile
+++ b/automation/Jenkinsfile
@@ -33,13 +33,13 @@ node {
          export EXECUTOR_NUMBER_OF_CORES=1
          export NUMBER_OF_EXECUTOR_INSTANCES=3
          export DF_ROWS_ARGUMENTS="20000 40000 60000"
-         export NUMBER_OF_ARGUMENTS=$(echo $DF_ROWS_ARGUMENTS | wc -w)
+         export NUMBER_OF_ARGUMENTS=3
          echo "SUBMITTING JOIN SCRIPT"
          /bin/j2 $WORKSPACE/yamls/spark-benchmark-join.yaml > /tmp/spark-benchmark-join.yaml
          /usr/local/bin/kubectl apply -f /tmp/spark-benchmark-join.yaml -n $namespace
          sleep 150
          
-         benchmarks=$(kubectl logs spark-benchmark-join-driver -n t01 | grep -Po -m $NUMBER_OF_ARGUMENTS "(\d*\.?\d*) seconds\$")
+         benchmarks=$(kubectl logs spark-benchmark-join-driver -n $namespace | grep -Po -m $NUMBER_OF_ARGUMENTS "(\d*\.?\d*) seconds\$")
          echo "FINISHED JOIN SCRIPT. BENCHMARK TIMES ARE $benchmarks"
          kubectl delete sparkapplication.sparkoperator.k8s.io spark-benchmark-join -n $namespace
          
