--- a/automation/Jenkinsfile
+++ b/automation/Jenkinsfile
@@ -39,7 +39,7 @@ node {
          /usr/local/bin/kubectl apply -f /tmp/spark-benchmark-join.yaml -n $namespace
          sleep 150
          
-         benchmarks=$(kubectl logs spark-benchmark-join-driver -n $namespace | grep -Po -m $NUMBER_OF_ARGUMENTS "(\d*\.?\d*) seconds\$")
+         benchmarks=`kubectl logs spark-benchmark-join-driver -n $namespace | grep -Po -m $NUMBER_OF_ARGUMENTS "(\d*\.?\d*) seconds$")`
          echo "FINISHED JOIN SCRIPT. BENCHMARK TIMES ARE $benchmarks"
          kubectl delete sparkapplication.sparkoperator.k8s.io spark-benchmark-join -n $namespace
          
