--- a/automation/Jenkinsfile
+++ b/automation/Jenkinsfile
@@ -25,7 +25,7 @@ node {
     }
   }
   
-  stage('Spark Submit') {
+  stage('Spark Join') {
     withKubeConfig([credentialsId: 'spark-benchmark-token',
                     serverUrl: "${apiserverurl}"
                    ]) {
@@ -43,9 +43,18 @@ node {
          
          echo "FINISHED JOIN SCRIPT. BENCHMARK TIMES ARE"
          /usr/local/bin/kubectl logs spark-benchmark-join-driver -n $namespace | grep -Po -m 3 "(\\d*\\.?\\d*) seconds\$"
-         
+      """
+    }
+  }
+  
+  stage('Spark Terragen Terrasort') {
+    withKubeConfig([credentialsId: 'spark-benchmark-token',
+                    serverUrl: "${apiserverurl}"
+                   ]) {
+      sh "/usr/local/bin/kubectl get pods -n $namespace"
+      sh """
          echo "SUBMITTING TERRAGEN SCRIPT"
-         export NUMBER_OF_ROWS_TO_GENERATE=200000
+         export NUMBER_OF_ROWS_TO_GENERATE=$rowstogenerate
          /bin/j2 $WORKSPACE/yamls/spark-benchmark-terragen.yaml > /tmp/spark-benchmark-terragen.yaml
          /usr/local/bin/kubectl apply -f /tmp/spark-benchmark-terragen.yaml -n $namespace
          sleep 110
