--- a/yamls/spark-benchmark-teravalidate.yaml
+++ b/yamls/spark-benchmark-teravalidate.yaml
@@ -1,7 +1,7 @@
 apiVersion: "sparkoperator.k8s.io/v1beta2"
 kind: SparkApplication
 metadata:
-  name: spark-benchmark-teragen
+  name: spark-benchmark-teravalidate
 spec:
   sparkConf:
     spark.mapr.user.secret: jenkins-secret
@@ -11,11 +11,11 @@ spec:
   mode: cluster
   image: gcr.io/mapr-252711/spark-2.4.5:202010301117C
   imagePullPolicy: Always
-  mainApplicationFile: "local:///spark-benchmark-mount/scripts/teragen.py"
+  mainApplicationFile: "local:///spark-benchmark-mount/scripts/teravalidate.py"
   restartPolicy:
     type: Never
   arguments:
-  - "{{NUMBER_OF_ROWS_TO_GENERATE}} {{TERAGEN_OUTPUT_DIR}}"
+  - "{{TERAVALIDATE_INPUT_DIR}}"
   imagePullSecrets:
   - imagepull
 
@@ -25,7 +25,7 @@ spec:
       claimName: spark-benchmark-claim
 
   driver:
-    cores: {{DRIVER_NUMBER_OF_CORES}}
+    cores: 1
     coreLimit: "1000m"
     memory: "512m"
     labels:
@@ -35,12 +35,13 @@ spec:
       mountPath: /spark-benchmark-mount
 
   executor:
-    cores: {{EXECUTOR_NUMBER_OF_CORES}}
+    cores: 1
     coreLimit: "1000m"
-    instances: {{NUMBER_OF_EXECUTOR_INSTANCES}}
+    instances: 3
     memory: "512m"
     labels:
       version: 2.4.5
     volumeMounts:
     - mountPath: /spark-benchmark-mount
       name: spark-benchmark-pv
+
