--- a/automation/Jenkinsfile
+++ b/automation/Jenkinsfile
@@ -66,19 +66,20 @@ node {
          /usr/local/bin/kubectl apply -f /tmp/spark-benchmark-terragen.yaml -n $namespace
          sleep 110
          echo "FINISHED TERRAGEN SCRIPT. TIME TO GENERATE $NUMBER_OF_ROWS_TO_GENERATE rows is,"
-         kubectl logs spark-benchmark-teragen-driver -n t01 | grep -Po "(\d*\.?\d*) seconds$"
+         /usr/local/bin/kubectl logs spark-benchmark-teragen-driver -n t01 | grep -Po "(\d*\.?\d*) seconds$"
          
          echo "SUBMITTING TERRASORT SCRIPT"
-         /usr/local/bin/kubectl apply -f $WORKSPACE/yamls/spark-benchmark-terrasort.yaml -n $namespace
+	 /bin/j2 $WORKSPACE/yamls/spark-benchmark-terasort.yaml > /tmp/spark-benchmark-terasort.yaml
+         /usr/local/bin/kubectl apply -f /tmp/spark-benchmark-terrasort.yaml -n $namespace
          sleep 150
          echo "FINISHED TERASORT SRIPT. TIME TO SORT $NUMBER_OF_ROWS_TO_GENERATE rows is,"
-         kubectl logs spark-benchmark-terasort-driver -n t01 | grep -Po "(\d*\.?\d*) seconds$"
+         /usr/local/bin/kubectl logs spark-benchmark-terasort-driver -n t01 | grep -Po "(\d*\.?\d*) seconds$"
          
          echo "PERFORMING TERAVALIDATE ON $NUMBER_OF_ROWS_TO_GENERATE ROWS"
-	       j2 $HOME/Spark-Benchmarking/yamls/spark-benchmark-teravalidate.yaml > /tmp/spark-benchmark-teravalidate.yaml
-	       kubectl apply -f /tmp/spark-benchmark-teravalidate.yaml -n $namespace
+	 /bin/j2 $HOME/Spark-Benchmarking/yamls/spark-benchmark-teravalidate.yaml > /tmp/spark-benchmark-teravalidate.yaml
+	 /usr/local/bin/kubectl apply -f /tmp/spark-benchmark-teravalidate.yaml -n $namespace
          
-         kubectl logs spark-benchmark-teravalidate-driver -n t01 | grep -Po "(\d*\.?\d*) seconds$"
+         /usr/local/bin/kubectl logs spark-benchmark-teravalidate-driver -n t01 | grep -Po "(\d*\.?\d*) seconds$"
          sleep 150
          echo "FINISHED TERRAVALIDATE. BENCHMARK TIMES ARE"
          /usr/local/bin/kubectl logs spark-benchmark-terrasort-driver -n $namespace | grep -Po -m 3 "(\\d*\\.?\\d*) seconds\$"
@@ -99,6 +100,9 @@ node {
 
          echo "DELETING SPARK TERRASORT OPERATOR"
          /usr/local/bin/kubectl delete sparkapplication.sparkoperator.k8s.io spark-benchmark-terrasort -n $namespace
+	 
+	 echo "DELETING SPARK TERAVALIDATE OPERATOR"
+         /usr/local/bin/kubectl delete sparkapplication.sparkoperator.k8s.io spark-benchmark-teravalidate -n $namespace
 
          echo "DELETING TEMP POD"
          /usr/local/bin/kubectl delete pod spark-benchmark-temp-pod -n $namespace
