Increasing sleep times between join jobs

--- a/yamls/spark-benchmark-terasort.yaml
+++ b/yamls/spark-benchmark-terasort.yaml
@@ -25,7 +25,7 @@ spec:
       claimName: spark-benchmark-claim
 
   driver:
-    cores: 1
+    cores: {{DRIVER_NUMBER_OF_CORES}}
     coreLimit: "1000m"
     memory: "512m"
     labels:
@@ -35,9 +35,9 @@ spec:
       mountPath: /spark-benchmark-mount
 
   executor:
-    cores: 1
+    cores: {{EXECUTOR_NUMBER_OF_CORES}}
     coreLimit: "1000m"
-    instances: 3
+    instances: {{NUMBER_OF_EXECUTOR_INSTANCES}}
     memory: "512m"
     labels:
       version: 2.4.5
