--- a/yamls/spark-benchmark-pvc.yaml
+++ b/yamls/spark-benchmark-pvc.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   storageClassName: df01
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 5Gi
