--- a/automation/Jenkinsfile
+++ b/automation/Jenkinsfile
@@ -42,7 +42,7 @@ node {
          sleep 150
          
          echo "FINISHED JOIN SCRIPT. BENCHMARK TIMES ARE"
-         /usr/local/bin/kubectl logs spark-benchmark-join-driver -n $namespace | grep -Po -m 3 "(\\d*\\.?\\d*) seconds\$"
+         /usr/local/bin/kubectl logs spark-benchmark-join-driver -n $namespace | grep -Po "(\\d*\\.?\\d*) seconds\$"
       """
     }
   }
@@ -66,23 +66,23 @@ node {
          /usr/local/bin/kubectl apply -f /tmp/spark-benchmark-terragen.yaml -n $namespace
          sleep 110
          echo "FINISHED TERRAGEN SCRIPT. TIME TO GENERATE $NUMBER_OF_ROWS_TO_GENERATE rows is,"
-         /usr/local/bin/kubectl logs spark-benchmark-teragen-driver -n t01 | grep -Po "(\d*\.?\d*) seconds$"
+         /usr/local/bin/kubectl logs spark-benchmark-teragen-driver -n t01 | grep -Po "(\\d*\\.?\\d*) seconds$"
          
          echo "SUBMITTING TERRASORT SCRIPT"
 	 /bin/j2 $WORKSPACE/yamls/spark-benchmark-terasort.yaml > /tmp/spark-benchmark-terasort.yaml
          /usr/local/bin/kubectl apply -f /tmp/spark-benchmark-terrasort.yaml -n $namespace
          sleep 150
          echo "FINISHED TERASORT SRIPT. TIME TO SORT $NUMBER_OF_ROWS_TO_GENERATE rows is,"
-         /usr/local/bin/kubectl logs spark-benchmark-terasort-driver -n t01 | grep -Po "(\d*\.?\d*) seconds$"
+         /usr/local/bin/kubectl logs spark-benchmark-terasort-driver -n t01 | grep -Po "(\\d*\\.?\\d*) seconds\$"
          
          echo "PERFORMING TERAVALIDATE ON $NUMBER_OF_ROWS_TO_GENERATE ROWS"
 	 /bin/j2 $HOME/Spark-Benchmarking/yamls/spark-benchmark-teravalidate.yaml > /tmp/spark-benchmark-teravalidate.yaml
 	 /usr/local/bin/kubectl apply -f /tmp/spark-benchmark-teravalidate.yaml -n $namespace
          
-         /usr/local/bin/kubectl logs spark-benchmark-teravalidate-driver -n t01 | grep -Po "(\d*\.?\d*) seconds$"
+         /usr/local/bin/kubectl logs spark-benchmark-teravalidate-driver -n t01 | grep -Po "(\\d*\\.?\\d*) seconds$"
          sleep 150
          echo "FINISHED TERRAVALIDATE. BENCHMARK TIMES ARE"
-         /usr/local/bin/kubectl logs spark-benchmark-terrasort-driver -n $namespace | grep -Po -m 3 "(\\d*\\.?\\d*) seconds\$"
+         /usr/local/bin/kubectl logs spark-benchmark-terrasort-driver -n $namespace | grep -Po "(\\d*\\.?\\d*) seconds\$"
       """
     }
   }
