--- a/automation/Jenkinsfile
+++ b/automation/Jenkinsfile
@@ -57,7 +57,7 @@ node {
          export DRIVER_NUMBER_OF_CORES=1
          export EXECUTOR_NUMBER_OF_CORES=1
          export NUMBER_OF_EXECUTOR_INSTANCES=3
-         export NUMBER_OF_ROWS_TO_GENERATE=$rowstogenerate
+         #export NUMBER_OF_ROWS_TO_GENERATE=$rowstogenerate
          export TERAGEN_OUTPUT_DIR="/spark-benchmark-mount/teragen-files"
          export TERASORT_INPUT_DIR="/spark-benchmark-mount/teragen-files"
          export TERASORT_OUTPUT_DIR="/spark-benchmark-mount/teravalidate-files"
