--- a/automation/Jenkinsfile
+++ b/automation/Jenkinsfile
@@ -7,7 +7,7 @@ node {
                    ]) {
       sh "/usr/local/bin/kubectl get pods -n $namespace"
       sh """
-         echo "PERFORMING MAPRTICKET GENERATION FOR USER: $mapruser"
+         echo "PERFORMING MAPRTICKET GENERATION FOR USER: $mapruser and $maprpassword"
          /usr/local/bin/kubectl exec -it tenantcli-0 bash -n $namespace -- bash -c "printf 'alice\\nbalice\\njenkins-secret\\nn' | kubernetes/ticketcreator.sh"
          sleep 10
          echo "CREATING PVC"
