--- a/yamls/spark-benchmark-join.yaml
+++ b/yamls/spark-benchmark-join.yaml
@@ -1,4 +1,4 @@
-apiVersion: "sparkoperator.k8s.io/v1beta2"
+apiVersion: "sparkoperator.hpe.com/v1beta2"
 kind: SparkApplication
 metadata:
   name: spark-benchmark-join
